--- a/app/src/main/res/layout/option_menu.xml
+++ b/app/src/main/res/layout/option_menu.xml
@@ -18,7 +18,7 @@
         android:layout_marginRight="10dp"
         android:background="@drawable/roundcorner"
         android:backgroundTint="@android:color/darker_gray"
-        android:text="Ja"
+        android:text="Track löschen"
         app:layout_constraintBottom_toBottomOf="@id/guideline_X_1"
         app:layout_constraintEnd_toEndOf="@id/guideline_Y_2"
         app:layout_constraintStart_toStartOf="@id/guideline_Y_1"
@@ -31,7 +31,7 @@
         android:layout_marginLeft="10dp"
         android:background="@drawable/roundcorner"
         android:backgroundTint="@android:color/darker_gray"
-        android:text="Abbrechen"
+        android:text="Track teilen"
         app:layout_constraintBottom_toBottomOf="@id/guideline_X_1"
         app:layout_constraintEnd_toEndOf="@id/guideline_Y_3"
         app:layout_constraintStart_toStartOf="@id/guideline_Y_2"
