file sharing working

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,3 @@
 <paths>
-    <!-- The name "files" is used to allow access to the app's internal storage -->
-    <files-path path="/" name="files" />
+    <files-path path="/" name="mytracks" />
 </paths>
