--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -199,6 +199,19 @@
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
             android:layout_height="0dp" android:layout_width="0dp"/>
+        <View
+            android:id="@+id/button1_btm"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/fensterbutton_background"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
+            app:layout_constraintTop_toTopOf="@id/guideline_YB35"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@id/guideline_X1"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
+
 
 
         <Button
