HALL Background added with clicked/uncliked

--- a/app/src/main/res/drawable/fensterbutton_background_bottom_clicked.xml
+++ b/app/src/main/res/drawable/fensterbutton_background_bottom_clicked.xml
@@ -18,10 +18,13 @@
         <shape>
             <stroke
                 android:width="3dp"
-                android:color="@color/white"></stroke>>
+                android:color="@color/white"></stroke>
+            >
             <corners android:radius="4dip"
                 android:topLeftRadius="0dp"
                 android:topRightRadius="0dp" />
+
+
         </shape>
     </item>
 
@@ -29,5 +32,8 @@
         android:top="3dp"
         android:width="40dp"
         android:height="40dp"
+        android:drawable="@drawable/hall3"
         android:gravity="center" />
+
+
 </layer-list>
