--- a/app/src/main/res/drawable/fensterbutton_background_bottom_clicked.xml
+++ b/app/src/main/res/drawable/fensterbutton_background_bottom_clicked.xml
@@ -6,7 +6,7 @@
         android:right="8dp"
         android:top="8dp">
         <shape>
-            <solid android:color="#988BC34A"></solid>
+            <solid android:color="@color/fenster_color_green"></solid>
             <corners
                 android:radius="6dip" />
 
