--- a/app/src/main/res/drawable/fensterbutton_background_bottom_unclicked.xml
+++ b/app/src/main/res/drawable/fensterbutton_background_bottom_unclicked.xml
@@ -5,12 +5,12 @@
 
 
     <item
-        android:bottom="0dp"
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp">
+        android:bottom="@dimen/clicked_padding"
+        android:left="@dimen/clicked_padding"
+        android:right="@dimen/clicked_padding"
+        android:top="@dimen/clicked_padding">
         <shape>
-            <solid android:color="#988BC34A"></solid>
+            <solid android:color="@color/fenster_color_green"></solid>
             <corners android:radius="6dip" />
 
         </shape>
