--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.332" />
+            app:layout_constraintGuide_percent="0.38" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X7"
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.53" />
+            app:layout_constraintGuide_percent="0.58" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X9"
@@ -96,14 +96,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.73" />
+            app:layout_constraintGuide_percent="0.78" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.85" />
+            app:layout_constraintGuide_percent="0.805" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X12"
@@ -183,10 +183,15 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.22" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.71" />
 
 
-        <!-- Buttons-->
-
+        <!-- Button1-->
         <View
             android:id="@+id/button1_top"
             android:tag="jazz_riff.sf2,0"
@@ -206,6 +211,32 @@
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintTop_toTopOf="@id/guideline_YB35"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
+            app:layout_constraintStart_toStartOf="@id/guideline_X1"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
+
+        <!-- Button2-->
+        <View
+            android:id="@+id/button2_top"
+            android:tag="jazz_riff.sf2,2"
+            android:background="@drawable/transition_top"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y5"
+            app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
+            app:layout_constraintStart_toStartOf="@id/guideline_X1"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_height="0dp" android:layout_width="0dp"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+        <View
+            android:id="@+id/button2_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y5"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
             app:layout_constraintVertical_bias="0.0"
@@ -213,98 +244,200 @@
             android:layout_height="0dp" android:layout_width="0dp"/>
 
 
-        <Button
-            android:id="@+id/button2"
-            style="@style/windowbutton_style"
-            android:tag="jazz_riff.sf2,2"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
-            app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@id/guideline_X1"
-            app:layout_constraintVertical_bias="0.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button3"
-            style="@style/windowbutton_style"
+        <!-- Button3 -->
+        <View
+            android:id="@+id/button3_top"
             android:tag="jazz_riff.sf2,4"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
+            android:background="@drawable/transition_top"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_YB35"
             app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
+            android:layout_height="0dp" android:layout_width="0dp"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button4"
-            style="@style/windowbutton_style"
-            android:tag="jazz_riff.sf2,5"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
-            app:layout_constraintStart_toStartOf="@id/guideline_X7"
+        <View
+            android:id="@+id/button3_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
-            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+            app:layout_constraintTop_toTopOf="@id/guideline_YB35"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
+            app:layout_constraintStart_toStartOf="@id/guideline_X3"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
 
-        <Button
-            android:id="@+id/button5"
-            style="@style/windowbutton_style"
+        <!-- Button4 -->
+        <View
+            android:id="@+id/button4_top"
+            android:background="@drawable/transition_top"
             android:tag="jazz_riff.sf2,6"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y5"
             app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
-
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
+            android:layout_height="0dp" android:layout_width="0dp"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button6"
-            style="@style/windowbutton_style"
-            android:tag="jazz_riff.sf2,7"
+        <View
+            android:id="@+id/button4_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y5"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
+            app:layout_constraintStart_toStartOf="@id/guideline_X3"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
+
+        <!-- Button 5 -->
+        <View
+            android:id="@+id/button5_top"
+            android:background="@drawable/transition_top"
+            android:tag="jazz_riff.sf2,5"
+            android:layout_height="0dp" android:layout_width="0dp"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
+            app:layout_constraintStart_toStartOf="@id/guideline_X7"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_YB35"
+            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+        <View
+            android:id="@+id/button5_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
+            app:layout_constraintTop_toTopOf="@id/guideline_YB35"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
+            app:layout_constraintStart_toStartOf="@id/guideline_X7"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
+
+        <!-- Button 6-->
+        <View
+            android:id="@+id/button6_top"
+            android:tag="jazz_riff.sf2,7"
+            android:background="@drawable/transition_top"
+            android:layout_height="0dp" android:layout_width="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y5"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
             app:layout_constraintStart_toStartOf="@id/guideline_X7"
             app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+        <View
+            android:id="@+id/button6_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y5"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
+            app:layout_constraintStart_toStartOf="@id/guideline_X7"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
 
-        <Button
-            android:id="@+id/button7"
-            style="@style/windowbutton_style"
+        <!-- Button 7 -->
+        <View
+            android:id="@+id/button7_top"
+            android:background="@drawable/transition_top"
             android:tag="jazz_riff.sf2,8"
+            android:layout_height="0dp" android:layout_width="0dp"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
             app:layout_constraintStart_toStartOf="@id/guideline_X9"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_YB35"
             app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button8"
-            style="@style/windowbutton_style"
-            android:tag="jazz_riff.sf2,9"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X12"
-            app:layout_constraintStart_toStartOf="@id/guideline_X11"
+        <View
+            android:id="@+id/button7_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
-            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+            app:layout_constraintTop_toTopOf="@id/guideline_YB35"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X10"
+            app:layout_constraintStart_toStartOf="@id/guideline_X9"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
 
-        <Button
-            android:id="@+id/button9"
-            style="@style/windowbutton_style"
+        <!-- Button 8  -->
+        <View
+            android:id="@+id/button8_top"
+            android:background="@drawable/transition_top"
             android:tag="jazz_riff.sf2,10"
+            android:layout_height="0dp" android:layout_width="0dp"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
             app:layout_constraintStart_toStartOf="@id/guideline_X9"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y5"
             app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+        <View
+            android:id="@+id/button8_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y5"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X10"
+            app:layout_constraintStart_toStartOf="@id/guideline_X9"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
 
-        <Button
-            android:id="@+id/button10"
-            style="@style/windowbutton_style"
-            android:tag="jazz_riff.sf2,11"
+
+        <!-- Button 9 -->
+        <View
+            android:id="@+id/button9_top"
+            android:background="@drawable/transition_top"
+            android:tag="jazz_riff.sf2,9"
+            android:layout_height="0dp" android:layout_width="0dp"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
             app:layout_constraintStart_toStartOf="@id/guideline_X11"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_YB35"
+            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+        <View
+            android:id="@+id/button9_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
+            app:layout_constraintTop_toTopOf="@id/guideline_YB35"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X12"
+            app:layout_constraintStart_toStartOf="@id/guideline_X11"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
+
+        <!-- Button 10 -->
+
+        <View
+            android:id="@+id/button10_top"
+            android:background="@drawable/transition_top"
+            android:tag="jazz_riff.sf2,11"
+            android:layout_height="0dp" android:layout_width="0dp"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X12"
+            app:layout_constraintStart_toStartOf="@id/guideline_X11"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y5"
             app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+        <View
+            android:id="@+id/button10_hall"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/transition_bottom"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y5"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X12"
+            app:layout_constraintStart_toStartOf="@id/guideline_X11"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:layout_height="0dp" android:layout_width="0dp"/>
+
 
         <ImageButton
             android:id="@+id/setting_button"
